--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -367,6 +367,24 @@ header.big-screen nav {
   transition: all 0.7s cubic-bezier(0.77, -0.01, 0.59, 0.87);
 }
 
+@media only screen and (max-width: 1300px) {
+  header.big-screen nav {
+    padding: 0px 0px 0 280px;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  header.big-screen nav {
+    padding: 0px 0px 0 170px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  header.big-screen nav {
+    padding: 0px 0px 0 140px;
+  }
+}
+
 header.big-screen nav ul {
   list-style: none;
 }
@@ -394,6 +412,18 @@ header.big-screen nav ul.menu-items li:not(:last-child) {
   margin-bottom: 30px;
 }
 
+@media only screen and (max-width: 900px) {
+  header.big-screen nav ul.menu-items li:not(:last-child) {
+    margin-bottom: 28px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  header.big-screen nav ul.menu-items li:not(:last-child) {
+    margin-bottom: 24px;
+  }
+}
+
 header.big-screen nav ul.menu-items li a {
   text-decoration: none;
   font-family: "Roboto", sans-serif;
@@ -405,6 +435,30 @@ header.big-screen nav ul.menu-items li a {
   transition: all 0.5s cubic-bezier(0.77, -0.01, 0.59, 0.87);
   -webkit-transform: translateY(40px);
           transform: translateY(40px);
+}
+
+@media only screen and (max-width: 1300px) {
+  header.big-screen nav ul.menu-items li a {
+    font-size: 48px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  header.big-screen nav ul.menu-items li a {
+    font-size: 42px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  header.big-screen nav ul.menu-items li a {
+    font-size: 36px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  header.big-screen nav ul.menu-items li a {
+    font-size: 34px;
+  }
 }
 
 header.big-screen nav ul.menu-items li::before {
@@ -419,6 +473,20 @@ header.big-screen nav ul.menu-items li::before {
   transition: all .5s ease;
 }
 
+@media only screen and (max-width: 900px) {
+  header.big-screen nav ul.menu-items li::before {
+    -webkit-transform: translate(-50%, -50%) scale(0.9);
+            transform: translate(-50%, -50%) scale(0.9);
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  header.big-screen nav ul.menu-items li::before {
+    -webkit-transform: translate(-50%, -50%) scale(0.8);
+            transform: translate(-50%, -50%) scale(0.8);
+  }
+}
+
 header.big-screen nav ul.menu-items li:hover::before {
   opacity: 1;
 }
@@ -430,12 +498,44 @@ header.big-screen nav ul.menu-items li:hover a {
   margin-left: 60px;
 }
 
+@media only screen and (max-width: 1300px) {
+  header.big-screen nav ul.menu-items li:hover a {
+    -webkit-transition: all .4s ease;
+    transition: all .4s ease;
+    margin-left: 40px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  header.big-screen nav ul.menu-items li:hover a {
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    margin-left: 30px;
+  }
+}
+
 header.big-screen nav ul.contact {
   position: absolute;
   bottom: 0%;
   right: 0px;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+@media only screen and (max-width: 1200px) {
+  header.big-screen nav ul.contact {
+    right: -68px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  header.big-screen nav ul.contact {
+    position: relative;
+    top: 28%;
+    left: 50%;
+    width: 100%;
+    right: 0px;
+  }
 }
 
 header.big-screen nav ul.contact li {
@@ -454,11 +554,20 @@ header.big-screen nav ul.contact li {
           justify-content: center;
 }
 
+@media only screen and (max-width: 600px) {
+  header.big-screen nav ul.contact li {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
 header.big-screen nav ul.contact li p {
   font-family: "Roboto", sans-serif;
   font-size: 24px;
   color: #13063D;
   font-weight: 700;
+  text-align: right;
   margin-bottom: 10px;
   -webkit-clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
           clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
@@ -468,11 +577,32 @@ header.big-screen nav ul.contact li p {
           transform: translateY(20px);
 }
 
+@media only screen and (max-width: 1300px) {
+  header.big-screen nav ul.contact li p {
+    margin-bottom: 6px;
+    font-size: 22px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  header.big-screen nav ul.contact li p {
+    margin-bottom: 4px;
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  header.big-screen nav ul.contact li p {
+    text-align: left;
+  }
+}
+
 header.big-screen nav ul.contact li a {
   text-decoration: none;
   font-family: "Montserrat", sans-serif;
   font-size: 28px;
   color: #3913B8;
+  text-align: right;
   -webkit-transition: all .5s ease;
   transition: all .5s ease;
   -webkit-clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
@@ -481,6 +611,30 @@ header.big-screen nav ul.contact li a {
   transition: all 0.5s cubic-bezier(0.77, -0.01, 0.59, 0.87);
   -webkit-transform: translateY(20px);
           transform: translateY(20px);
+}
+
+@media only screen and (max-width: 1300px) {
+  header.big-screen nav ul.contact li a {
+    font-size: 26px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  header.big-screen nav ul.contact li a {
+    font-size: 24px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  header.big-screen nav ul.contact li a {
+    font-size: 22px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  header.big-screen nav ul.contact li a {
+    text-align: left;
+  }
 }
 
 /* MEDIA QUERIES STARTS */
