--- a/style/components/_services-section.scss
+++ b/style/components/_services-section.scss
@@ -25,6 +25,10 @@ section#services{
         @media only screen and (max-width: 1100px) {
             width: 90%;
         }
+        @media only screen and (max-width: 600px) {
+            width: 100%;
+            font-size: 28px;
+        }
     }
    
 
