--- a/style/layouts/_header.scss
+++ b/style/layouts/_header.scss
@@ -161,6 +161,15 @@ header.big-screen {
     @media only screen and (max-width: 800px) {
       padding:0px 0px 0 140px;
     }
+    @media only screen and (max-width: 500px) {
+      padding:0px 0px 0 115px;
+    }
+    @media only screen and (max-width: 400px) {
+      padding:0px 0px 0 95px;
+    }
+    @media only screen and (max-width: 360px) {
+      padding:0px 0px 0 84px;
+    }
 
 
       ul {
@@ -188,6 +197,12 @@ header.big-screen {
               @media only screen and (max-width: 700px) {
                 margin-bottom: 24px;
               }
+              @media only screen and (max-width: 400px) {
+                margin-bottom: 20px;
+              }
+              @media only screen and (max-width: 400px) {
+                margin-bottom: 18px;
+              }
             }
             a{
               text-decoration: none;
@@ -211,6 +226,12 @@ header.big-screen {
               @media only screen and (max-width: 700px) {
                 font-size: 34px;
               }
+              @media only screen and (max-width: 400px) {
+                font-size: 32px;
+              }
+              @media only screen and (max-width: 400px) {
+                font-size: 30px;
+              }
             }
             &::before{
               content: url('../../assets/images/right-arrow-blue.svg');
@@ -227,6 +248,18 @@ header.big-screen {
               }
               @media only screen and (max-width: 700px) {
                 transform: translate(-50%, -50%) scale(0.8);
+              }
+              @media only screen and (max-width: 500px) {
+                transform: translate(-50%, -50%) scale(0.7);
+                left: -40px;
+              }
+              @media only screen and (max-width: 400px) {
+                transform: translate(-50%, -50%) scale(0.7);
+                left: -32px;
+              }
+              @media only screen and (max-width: 400px) {
+                transform: translate(-50%, -50%) scale(0.6);
+                left: -25px;
               }
             }
             
@@ -248,6 +281,8 @@ header.big-screen {
                 transition: all .3s ease; 
                 margin-left: 30px;
               }
+           
+             
              
             }
           }
@@ -301,6 +336,12 @@ header.big-screen {
             @media only screen and (max-width: 600px) {
               text-align: left;
             }
+            @media only screen and (max-width: 400px) {
+              font-size: 18px;
+            }
+            @media only screen and (max-width: 360px) {
+              font-size: 17px;
+            }
            }
             a{
               text-decoration: none;
@@ -326,6 +367,12 @@ header.big-screen {
 
               @media only screen and (max-width: 600px) {
                 text-align: left;
+              }
+              @media only screen and (max-width: 400px) {
+                font-size: 20px;
+              }
+              @media only screen and (max-width: 360px) {
+                font-size: 19px;
               }
             }
 
