--- a/style/components/_hero-section.scss
+++ b/style/components/_hero-section.scss
@@ -26,6 +26,22 @@ main{
         @media only screen and (max-width: 1550px) {
             margin: 60px 60px 0px 60px;
         }
+
+        @media only screen and (max-width: 1300px) {
+            padding: 140px 0;
+        }
+        @media only screen and (max-width: 1200px) {
+            padding: 130px 0;
+        }
+        @media only screen and (max-width: 1100px) {
+            padding: 120px 0;
+        }
+        @media only screen and (max-width: 1000px) {
+            padding: 110px 0;
+        }
+        @media only screen and (max-width: 900px) {
+            padding: 100px 0;
+        }
         @media only screen and (max-width: 400px) {
             margin: 60px 40px 0px 40px;
         }
