--- a/style/components/_services-section.scss
+++ b/style/components/_services-section.scss
@@ -12,20 +12,55 @@ section#services{
     align-items: center;
 
     @media only screen and (max-width: 1550px) {
-        margin: 0px 60px 80px 60px;
+        margin: 0px 60px 0px 60px;
+    }
+    @media only screen and (max-width: 1300px) {
+        padding: 60px 0 140px 0;
+    }
+    @media only screen and (max-width: 1200px) {
+        padding: 60px 0 130px 0;
+    }
+    @media only screen and (max-width: 1100px) {
+        padding: 60px 0 120px 0;
+    }
+    @media only screen and (max-width: 1000px) {
+        padding: 60px 0 110px 0;
+    }
+    @media only screen and (max-width: 900px) {
+        padding: 60px 0 100px 0;
     }
     @media only screen and (max-width: 400px) {
-        margin: 0px 40px 80px 40px;
+        margin: 0px 40px 0px 40px;
     }
 
     h2{
         width: 56%;
         margin-bottom: 100px;
         text-align: center;
-        @media only screen and (max-width: 1100px) {
-            width: 90%;
+        @media only screen and (max-width: 1500px) {
+            width: 50%;
         }
-        @media only screen and (max-width: 600px) {
+        
+        @media only screen and (max-width: 1300px) {
+            width: 60%;
+           }
+          @media only screen and (max-width: 1200px) {
+            width: 70%;
+            font-size: 40px;
+           }
+          @media only screen and (max-width: 1000px) {
+            width: 80%;
+           }
+          @media only screen and (max-width: 900px) {
+            width: 70%;
+            font-size: 36px;
+           }
+           @media only screen and (max-width: 700px) {
+            width: 80%;
+            font-size: 34px;
+           }
+           
+           @media only screen and (max-width: 600px) {
             width: 100%;
             font-size: 28px;
         }
