--- a/style/components/_team-section.scss
+++ b/style/components/_team-section.scss
@@ -10,10 +10,37 @@ main{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        @media only screen and (max-width: 1550px) {
+            margin: 0px 60px 0px 60px;
+        }
+        @media only screen and (max-width: 1300px) {
+            padding: 60px 0 140px 0;
+        }
+        @media only screen and (max-width: 1200px) {
+            padding: 60px 0 130px 0;
+        }
+        @media only screen and (max-width: 1100px) {
+            padding: 60px 0 120px 0;
+        }
+        @media only screen and (max-width: 1000px) {
+            padding: 60px 0 110px 0;
+        }
+        @media only screen and (max-width: 900px) {
+            padding: 60px 0 100px 0;
+        }
+        @media only screen and (max-width: 400px) {
+            margin: 0px 40px 0px 40px;
+        }
+
+
         h2{
             width: 40%;
             margin-bottom: 100px;
             text-align: center;
+            @media only screen and (max-width: 1200px) {
+                font-size: 40px;
+            }
             @media only screen and (max-width: 1100px) {
                 width: 90%;
             }
@@ -48,7 +75,7 @@ main{
                 grid-gap: 40px;
             }
 
-            @media only screen and (max-width: 1050px) {
+            @media only screen and (max-width: 600px) {
                 grid-template-columns: 1fr;
             }
 
