--- a/style/layouts/_footer.scss
+++ b/style/layouts/_footer.scss
@@ -24,6 +24,10 @@ footer#contact.big-screen {
     article{
       &:not(:last-child){
         margin-bottom: 60px;
+
+        @media only screen and (max-width: 500px) {
+          margin-bottom: 40px;
+        }
       }
 
       &.upper{
@@ -33,6 +37,9 @@ footer#contact.big-screen {
         align-items: center;
         width: 100%;
         margin-bottom: 100px;
+        @media only screen and (max-width: 500px) {
+          margin-bottom: 60px;
+        }
 
         h2{
           width: 40%;
@@ -79,6 +86,7 @@ footer#contact.big-screen {
           @media only screen and (max-width: 700px) {
             width: 70%;
            }
+         
       }
       }
 
@@ -88,7 +96,11 @@ footer#contact.big-screen {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-
+        @media only screen and (max-width: 900px) {
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+        }
          
     
             .logo{
@@ -122,11 +134,38 @@ footer#contact.big-screen {
             justify-content: space-between;
             align-items: center;
 
+            @media only screen and (max-width: 1200px) {
+              flex-basis: 480px;
+            }
+            @media only screen and (max-width: 1000px) {
+              flex-basis: 440px;
+            }
+            @media only screen and (max-width: 950px) {
+              flex-basis: 400px;
+            }
+            @media only screen and (max-width: 900px) {
+              flex-basis: 220px;
+            }
+            @media only screen and (max-width: 500px) {
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+              
+            }
+            
             .mail-phone{
               display: flex;
               flex-direction: column;
               justify-content: center;
               align-items: center;
+              
+              @media only screen and (max-width: 900px) {
+                margin-right: 60px;
+              }
+              @media only screen and (max-width: 500px) {
+                margin-right: 0px;
+                margin-bottom: 30px;
+              }
               p{
                 font-size: $paragraph-font-size-2;
 
