--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -774,6 +774,12 @@ footer#contact.big-screen article:not(:last-child) {
   margin-bottom: 60px;
 }
 
+@media only screen and (max-width: 500px) {
+  footer#contact.big-screen article:not(:last-child) {
+    margin-bottom: 40px;
+  }
+}
+
 footer#contact.big-screen article.upper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -790,6 +796,12 @@ footer#contact.big-screen article.upper {
           align-items: center;
   width: 100%;
   margin-bottom: 100px;
+}
+
+@media only screen and (max-width: 500px) {
+  footer#contact.big-screen article.upper {
+    margin-bottom: 60px;
+  }
 }
 
 footer#contact.big-screen article.upper h2 {
@@ -878,6 +890,21 @@ footer#contact.big-screen article.mid {
           align-items: center;
 }
 
+@media only screen and (max-width: 900px) {
+  footer#contact.big-screen article.mid {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 footer#contact.big-screen article.mid .logo {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -937,6 +964,49 @@ footer#contact.big-screen article.mid .contact-info {
           align-items: center;
 }
 
+@media only screen and (max-width: 1200px) {
+  footer#contact.big-screen article.mid .contact-info {
+    -ms-flex-preferred-size: 480px;
+        flex-basis: 480px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  footer#contact.big-screen article.mid .contact-info {
+    -ms-flex-preferred-size: 440px;
+        flex-basis: 440px;
+  }
+}
+
+@media only screen and (max-width: 950px) {
+  footer#contact.big-screen article.mid .contact-info {
+    -ms-flex-preferred-size: 400px;
+        flex-basis: 400px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  footer#contact.big-screen article.mid .contact-info {
+    -ms-flex-preferred-size: 220px;
+        flex-basis: 220px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  footer#contact.big-screen article.mid .contact-info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 footer#contact.big-screen article.mid .contact-info .mail-phone {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -951,6 +1021,19 @@ footer#contact.big-screen article.mid .contact-info .mail-phone {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media only screen and (max-width: 900px) {
+  footer#contact.big-screen article.mid .contact-info .mail-phone {
+    margin-right: 60px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  footer#contact.big-screen article.mid .contact-info .mail-phone {
+    margin-right: 0px;
+    margin-bottom: 30px;
+  }
 }
 
 footer#contact.big-screen article.mid .contact-info .mail-phone p {
