--- a/style/components/_about-section.scss
+++ b/style/components/_about-section.scss
@@ -64,6 +64,7 @@ section#about{
            @media only screen and (max-width: 600px) {
             width: 100%;
             font-size: 28px;
+            margin-bottom: 60px;
         }
         
     }
@@ -81,6 +82,10 @@ section#about{
         }
         @media only screen and (max-width: 1100px) {
             width: 90%;
+        }
+
+        @media only screen and (max-width: 600px) {
+            font-size: 18px;
         }
     }
 }
