--- a/style/components/_hero-section.scss
+++ b/style/components/_hero-section.scss
@@ -6,10 +6,13 @@ main{
         // margin-top: 80px;
         padding: 0 140px;
         @include center;
-
         // border: $border-check-1;
+
         @media only screen and (max-width: 900px) {
             padding: 0px 60px;
+        }
+        @media only screen and (max-width: 600px) {
+            padding: 0px 40px;
         }
 
     section#hero{
