--- a/style/components/_projects-section.scss
+++ b/style/components/_projects-section.scss
@@ -61,8 +61,9 @@ main{
                }
                
                @media only screen and (max-width: 600px) {
-                width: 100%;
+                width: 90%;
                 font-size: 28px;
+                margin-bottom: 60px;
             }
         }
        
