--- a/style/components/_services-section.scss
+++ b/style/components/_services-section.scss
@@ -63,6 +63,7 @@ section#services{
            @media only screen and (max-width: 600px) {
             width: 100%;
             font-size: 28px;
+            margin-bottom: 60px;
         }
     }
    
