--- a/style/components/_team-section.scss
+++ b/style/components/_team-section.scss
@@ -47,6 +47,7 @@ main{
             @media only screen and (max-width: 600px) {
                 width: 100%;
                 font-size: 28px;
+                margin-bottom: 60px;
             }
         }
        
