--- a/style/components/_about-section.scss
+++ b/style/components/_about-section.scss
@@ -62,10 +62,14 @@ section#about{
            }
            
            @media only screen and (max-width: 600px) {
-            width: 100%;
-            font-size: 28px;
-            margin-bottom: 60px;
-        }
+                width: 100%;
+                font-size: 28px;
+                margin-bottom: 60px;
+            }
+           @media only screen and (max-width: 360px) {
+                font-size: 26px;
+                line-height: 32px;
+            }
         
     }
     p{
@@ -86,6 +90,9 @@ section#about{
 
         @media only screen and (max-width: 600px) {
             font-size: 18px;
+        }
+        @media only screen and (max-width: 600px) {
+            text-align: left;
         }
     }
 }
