--- a/style/components/_hero-section.scss
+++ b/style/components/_hero-section.scss
@@ -45,6 +45,9 @@ main{
         @media only screen and (max-width: 900px) {
             padding: 100px 0;
         }
+        @media only screen and (max-width: 500px) {
+            padding: 60px 0;
+        }
         @media only screen and (max-width: 400px) {
             margin: 60px 40px 0px 40px;
         }
@@ -61,11 +64,25 @@ main{
             }
             @media only screen and (max-width: 1000px) {
                 font-size: 42px;
-                line-height: 56px;
+                line-height: 52px;
             }
-            @media only screen and (max-width: 700px) {
-                font-size: 42px;
-                line-height: 56px;
+          
+            
+            @media only screen and (max-width: 500px) {
+                font-size: 36px;
+                line-height: 48px;
+            }
+            @media only screen and (max-width: 450px) {
+                font-size: 32px;
+                line-height: 40px;
+            }
+            @media only screen and (max-width: 400px) {
+                font-size: 30px;
+                line-height: 36px;
+            }
+            @media only screen and (max-width: 360px) {
+                font-size: 26px;
+                line-height: 32px;
             }
             
             
@@ -81,6 +98,11 @@ main{
             }
             @media only screen and (max-width: 1000px) {
                 width: 80%;
+            }
+            @media only screen and (max-width: 500px) {
+                width: 100%;
+                font-size: 18px;
+                line-height: 26px;
             }
         }
 
