--- a/style/components/_services-section.scss
+++ b/style/components/_services-section.scss
@@ -65,6 +65,10 @@ section#services{
             font-size: 28px;
             margin-bottom: 60px;
         }
+        @media only screen and (max-width: 360px) {
+            font-size: 26px;
+            line-height: 32px;
+        }
     }
    
 
