--- a/style/layouts/_footer.scss
+++ b/style/layouts/_footer.scss
@@ -75,6 +75,13 @@ footer#contact.big-screen {
            @media only screen and (max-width: 600px) {
             width: 80%;
             font-size: 28px;
+          }
+           @media only screen and (max-width: 600px) {
+            width: 100%;
+          }
+          @media only screen and (max-width: 360px) {
+            font-size: 26px;
+            line-height: 32px;
         }
         }
 
@@ -86,7 +93,9 @@ footer#contact.big-screen {
           @media only screen and (max-width: 700px) {
             width: 70%;
            }
-         
+           @media only screen and (max-width: 600px) {
+            width: 100%;
+          }
       }
       }
 
