--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -862,6 +862,19 @@ footer#contact.big-screen article.upper h2 {
   }
 }
 
+@media only screen and (max-width: 600px) {
+  footer#contact.big-screen article.upper h2 {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  footer#contact.big-screen article.upper h2 {
+    font-size: 26px;
+    line-height: 32px;
+  }
+}
+
 footer#contact.big-screen article.upper p {
   line-height: 30px;
   text-align: center;
@@ -870,6 +883,12 @@ footer#contact.big-screen article.upper p {
 @media only screen and (max-width: 700px) {
   footer#contact.big-screen article.upper p {
     width: 70%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  footer#contact.big-screen article.upper p {
+    width: 100%;
   }
 }
 
@@ -1213,6 +1232,12 @@ main section#hero {
   }
 }
 
+@media only screen and (max-width: 500px) {
+  main section#hero {
+    padding: 60px 0;
+  }
+}
+
 @media only screen and (max-width: 400px) {
   main section#hero {
     margin: 60px 40px 0px 40px;
@@ -1241,14 +1266,35 @@ main section#hero h1 {
 @media only screen and (max-width: 1000px) {
   main section#hero h1 {
     font-size: 42px;
-    line-height: 56px;
+    line-height: 52px;
   }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 500px) {
   main section#hero h1 {
-    font-size: 42px;
-    line-height: 56px;
+    font-size: 36px;
+    line-height: 48px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  main section#hero h1 {
+    font-size: 32px;
+    line-height: 40px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  main section#hero h1 {
+    font-size: 30px;
+    line-height: 36px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  main section#hero h1 {
+    font-size: 26px;
+    line-height: 32px;
   }
 }
 
@@ -1268,6 +1314,14 @@ main section#hero p {
 @media only screen and (max-width: 1000px) {
   main section#hero p {
     width: 80%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  main section#hero p {
+    width: 100%;
+    font-size: 18px;
+    line-height: 26px;
   }
 }
 
@@ -1422,6 +1476,13 @@ main section#about h2 {
   }
 }
 
+@media only screen and (max-width: 360px) {
+  main section#about h2 {
+    font-size: 26px;
+    line-height: 32px;
+  }
+}
+
 main section#about p {
   line-height: 30px;
   width: 56%;
@@ -1447,6 +1508,12 @@ main section#about p:not(:last-child) {
 @media only screen and (max-width: 600px) {
   main section#about p {
     font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  main section#about p {
+    text-align: left;
   }
 }
 
@@ -1562,6 +1629,13 @@ main section#services h2 {
     width: 100%;
     font-size: 28px;
     margin-bottom: 60px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  main section#services h2 {
+    font-size: 26px;
+    line-height: 32px;
   }
 }
 
@@ -1903,6 +1977,13 @@ main section#projects h2 {
   }
 }
 
+@media only screen and (max-width: 360px) {
+  main section#projects h2 {
+    font-size: 26px;
+    line-height: 32px;
+  }
+}
+
 main section#projects .projects-container {
   display: -ms-grid;
   display: grid;
@@ -2204,6 +2285,13 @@ main section#team h2 {
     width: 100%;
     font-size: 28px;
     margin-bottom: 60px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  main section#team h2 {
+    font-size: 26px;
+    line-height: 32px;
   }
 }
 
