--- a/style/components/_about-section.scss
+++ b/style/components/_about-section.scss
@@ -30,8 +30,11 @@ section#about{
     @media only screen and (max-width: 900px) {
         padding: 60px 0 100px 0;
     }
+    @media only screen and (max-width: 500px) {
+        padding: 60px 0 60px 0;
+    }
     @media only screen and (max-width: 400px) {
-        margin: 0px 40px 0px 40px;
+        margin: 0px auto 0px auto;
     }
     h2{
         width: 56%;
@@ -69,6 +72,7 @@ section#about{
            @media only screen and (max-width: 360px) {
                 font-size: 26px;
                 line-height: 32px;
+                margin-bottom: 40px;
             }
         
     }
@@ -93,6 +97,12 @@ section#about{
         }
         @media only screen and (max-width: 600px) {
             text-align: left;
+        }
+
+        @media only screen and (max-width: 500px) {
+            width: 100%;
+            font-size: 18px;
+            line-height: 30px;
         }
     }
 }
