--- a/style/components/_hero-section.scss
+++ b/style/components/_hero-section.scss
@@ -14,6 +14,9 @@ main{
         @media only screen and (max-width: 600px) {
             padding: 0px 40px;
         }
+        @media only screen and (max-width: 600px) {
+            padding: 0px 30px;
+        }
 
     section#hero{
         width: 100%;
@@ -49,7 +52,7 @@ main{
             padding: 60px 0;
         }
         @media only screen and (max-width: 400px) {
-            margin: 60px 40px 0px 40px;
+            margin: 60px auto 0px auto;
         }
         h1{
             width: 60%;
@@ -102,7 +105,7 @@ main{
             @media only screen and (max-width: 500px) {
                 width: 100%;
                 font-size: 18px;
-                line-height: 26px;
+                line-height: 30px;
             }
         }
 
