--- a/style/components/_projects-section.scss
+++ b/style/components/_projects-section.scss
@@ -29,6 +29,9 @@ main{
         @media only screen and (max-width: 900px) {
             padding: 60px 0 100px 0;
         }
+        @media only screen and (max-width: 500px) {
+            padding: 60px 0 60px 0;
+        }
         @media only screen and (max-width: 400px) {
             margin: 0px 40px 0px 40px;
         }
@@ -68,6 +71,7 @@ main{
             @media only screen and (max-width: 360px) {
                 font-size: 26px;
                 line-height: 32px;
+                margin-bottom: 40px;
             }
         }
        
